backend/iptables-restore
# Generated by iptables-save v1.4.21 on Mon Oct  9 20:51:54 2023
*security
:INPUT ACCEPT [1773530749:11740291813649]
:FORWARD ACCEPT [1929953581:1697595512679]
:OUTPUT ACCEPT [1589439017:7298987164312]
COMMIT
# Completed on Mon Oct  9 20:51:54 2023
# Generated by iptables-save v1.4.21 on Mon Oct  9 20:51:54 2023
*mangle
:PREROUTING ACCEPT [3699595655:13437527287829]
:INPUT ACCEPT [1773530749:11740291813649]
:FORWARD ACCEPT [1929958758:1697597212444]
:OUTPUT ACCEPT [1589439021:7298987164644]
:POSTROUTING ACCEPT [3519392600:8996582677191]
COMMIT
# Completed on Mon Oct  9 20:51:54 2023
# Generated by iptables-save v1.4.21 on Mon Oct  9 20:51:54 2023
*filter
:INPUT ACCEPT [135900581:90177477063]
:FORWARD ACCEPT [285289389:134540627677]
:OUTPUT ACCEPT [139154384:51376231978]
:neutron-filter-top - [0:0]
:neutron-linuxbri-FORWARD - [0:0]
:neutron-linuxbri-INPUT - [0:0]
:neutron-linuxbri-OUTPUT - [0:0]
:neutron-linuxbri-i661646c1-e - [0:0]
:neutron-linuxbri-if37c4f3e-f - [0:0]
:neutron-linuxbri-local - [0:0]
:neutron-linuxbri-o661646c1-e - [0:0]
:neutron-linuxbri-of37c4f3e-f - [0:0]
:neutron-linuxbri-s661646c1-e - [0:0]
:neutron-linuxbri-sf37c4f3e-f - [0:0]
:neutron-linuxbri-sg-chain - [0:0]
:neutron-linuxbri-sg-fallback - [0:0]
-A INPUT -j neutron-linuxbri-INPUT
-A INPUT -i virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 67 -j ACCEPT
-A FORWARD -j neutron-filter-top
-A FORWARD -j neutron-linuxbri-FORWARD
-A FORWARD -d 192.168.122.0/24 -o virbr0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.122.0/24 -i virbr0 -j ACCEPT
-A FORWARD -i virbr0 -o virbr0 -j ACCEPT
-A FORWARD -o virbr0 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i virbr0 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -j neutron-filter-top
-A OUTPUT -j neutron-linuxbri-OUTPUT
-A OUTPUT -o virbr0 -p udp -m udp --dport 68 -j ACCEPT
-A neutron-filter-top -j neutron-linuxbri-local
-A neutron-linuxbri-FORWARD -m physdev --physdev-out tap661646c1-e7 --physdev-is-bridged -m comment --comment "Direct traffic from the VM interface to the security group chain." -j neutron-linuxbri-sg-chain
-A neutron-linuxbri-FORWARD -m physdev --physdev-in tap661646c1-e7 --physdev-is-bridged -m comment --comment "Direct traffic from the VM interface to the security group chain." -j neutron-linuxbri-sg-chain
-A neutron-linuxbri-FORWARD -m physdev --physdev-out tapf37c4f3e-f0 --physdev-is-bridged -m comment --comment "Direct traffic from the VM interface to the security group chain." -j neutron-linuxbri-sg-chain
-A neutron-linuxbri-FORWARD -m physdev --physdev-in tapf37c4f3e-f0 --physdev-is-bridged -m comment --comment "Direct traffic from the VM interface to the security group chain." -j neutron-linuxbri-sg-chain
-A neutron-linuxbri-FORWARD -m physdev --physdev-out tap7118ea48-55 --physdev-is-bridged -m comment --comment "Accept all packets when port is trusted." -j ACCEPT
-A neutron-linuxbri-FORWARD -m physdev --physdev-in tap7118ea48-55 --physdev-is-bridged -m comment --comment "Accept all packets when port is trusted." -j ACCEPT
-A neutron-linuxbri-FORWARD -m physdev --physdev-out tapb4b5a174-38 --physdev-is-bridged -m comment --comment "Accept all packets when port is trusted." -j ACCEPT
-A neutron-linuxbri-FORWARD -m physdev --physdev-in tapb4b5a174-38 --physdev-is-bridged -m comment --comment "Accept all packets when port is trusted." -j ACCEPT
-A neutron-linuxbri-INPUT -m physdev --physdev-in tap661646c1-e7 --physdev-is-bridged -m comment --comment "Direct incoming traffic from VM to the security group chain." -j neutron-linuxbri-o661646c1-e
-A neutron-linuxbri-INPUT -m physdev --physdev-in tapf37c4f3e-f0 --physdev-is-bridged -m comment --comment "Direct incoming traffic from VM to the security group chain." -j neutron-linuxbri-of37c4f3e-f
-A neutron-linuxbri-i661646c1-e -m state --state RELATED,ESTABLISHED -m comment --comment "Direct packets associated with a known session to the RETURN chain." -j RETURN
-A neutron-linuxbri-i661646c1-e -d 192.168.17.211/32 -p udp -m udp --sport 67 --dport 68 -j RETURN
-A neutron-linuxbri-i661646c1-e -d 255.255.255.255/32 -p udp -m udp --sport 67 --dport 68 -j RETURN
-A neutron-linuxbri-i661646c1-e -j RETURN
-A neutron-linuxbri-i661646c1-e -m state --state INVALID -m comment --comment "Drop packets that appear related to an existing connection (e.g. TCP ACK/FIN) but do not have an entry in conntrack." -j DROP
-A neutron-linuxbri-i661646c1-e -m comment --comment "Send unmatched traffic to the fallback chain." -j neutron-linuxbri-sg-fallback
-A neutron-linuxbri-if37c4f3e-f -m state --state RELATED,ESTABLISHED -m comment --comment "Direct packets associated with a known session to the RETURN chain." -j RETURN
-A neutron-linuxbri-if37c4f3e-f -d 192.168.17.231/32 -p udp -m udp --sport 67 --dport 68 -j RETURN
-A neutron-linuxbri-if37c4f3e-f -d 255.255.255.255/32 -p udp -m udp --sport 67 --dport 68 -j RETURN
-A neutron-linuxbri-if37c4f3e-f -j RETURN
-A neutron-linuxbri-if37c4f3e-f -m state --state INVALID -m comment --comment "Drop packets that appear related to an existing connection (e.g. TCP ACK/FIN) but do not have an entry in conntrack." -j DROP
-A neutron-linuxbri-if37c4f3e-f -m comment --comment "Send unmatched traffic to the fallback chain." -j neutron-linuxbri-sg-fallback
-A neutron-linuxbri-o661646c1-e -s 0.0.0.0/32 -d 255.255.255.255/32 -p udp -m udp --sport 68 --dport 67 -m comment --comment "Allow DHCP client traffic." -j RETURN
-A neutron-linuxbri-o661646c1-e -j neutron-linuxbri-s661646c1-e
-A neutron-linuxbri-o661646c1-e -p udp -m udp --sport 68 --dport 67 -m comment --comment "Allow DHCP client traffic." -j RETURN
-A neutron-linuxbri-o661646c1-e -p udp -m udp --sport 67 --dport 68 -m comment --comment "Prevent DHCP Spoofing by VM." -j DROP
-A neutron-linuxbri-o661646c1-e -m state --state RELATED,ESTABLISHED -m comment --comment "Direct packets associated with a known session to the RETURN chain." -j RETURN
-A neutron-linuxbri-o661646c1-e -j RETURN
-A neutron-linuxbri-o661646c1-e -m state --state INVALID -m comment --comment "Drop packets that appear related to an existing connection (e.g. TCP ACK/FIN) but do not have an entry in conntrack." -j DROP
-A neutron-linuxbri-o661646c1-e -m comment --comment "Send unmatched traffic to the fallback chain." -j neutron-linuxbri-sg-fallback
-A neutron-linuxbri-of37c4f3e-f -s 0.0.0.0/32 -d 255.255.255.255/32 -p udp -m udp --sport 68 --dport 67 -m comment --comment "Allow DHCP client traffic." -j RETURN
-A neutron-linuxbri-of37c4f3e-f -j neutron-linuxbri-sf37c4f3e-f
-A neutron-linuxbri-of37c4f3e-f -p udp -m udp --sport 68 --dport 67 -m comment --comment "Allow DHCP client traffic." -j RETURN
-A neutron-linuxbri-of37c4f3e-f -p udp -m udp --sport 67 --dport 68 -m comment --comment "Prevent DHCP Spoofing by VM." -j DROP
-A neutron-linuxbri-of37c4f3e-f -m state --state RELATED,ESTABLISHED -m comment --comment "Direct packets associated with a known session to the RETURN chain." -j RETURN
-A neutron-linuxbri-of37c4f3e-f -j RETURN
-A neutron-linuxbri-of37c4f3e-f -m state --state INVALID -m comment --comment "Drop packets that appear related to an existing connection (e.g. TCP ACK/FIN) but do not have an entry in conntrack." -j DROP
-A neutron-linuxbri-of37c4f3e-f -m comment --comment "Send unmatched traffic to the fallback chain." -j neutron-linuxbri-sg-fallback
-A neutron-linuxbri-s661646c1-e -s 192.168.17.211/32 -m mac --mac-source FA:16:3E:5C:80:6C -m comment --comment "Allow traffic from defined IP/MAC pairs." -j RETURN
-A neutron-linuxbri-s661646c1-e -m comment --comment "Drop traffic without an IP/MAC allow rule." -j DROP
-A neutron-linuxbri-sf37c4f3e-f -s 192.168.17.231/32 -m mac --mac-source FA:16:3E:B4:93:BB -m comment --comment "Allow traffic from defined IP/MAC pairs." -j RETURN
-A neutron-linuxbri-sf37c4f3e-f -m comment --comment "Drop traffic without an IP/MAC allow rule." -j DROP
-A neutron-linuxbri-sg-chain -m physdev --physdev-out tap661646c1-e7 --physdev-is-bridged -m comment --comment "Jump to the VM specific chain." -j neutron-linuxbri-i661646c1-e
-A neutron-linuxbri-sg-chain -m physdev --physdev-in tap661646c1-e7 --physdev-is-bridged -m comment --comment "Jump to the VM specific chain." -j neutron-linuxbri-o661646c1-e
-A neutron-linuxbri-sg-chain -m physdev --physdev-out tapf37c4f3e-f0 --physdev-is-bridged -m comment --comment "Jump to the VM specific chain." -j neutron-linuxbri-if37c4f3e-f
-A neutron-linuxbri-sg-chain -m physdev --physdev-in tapf37c4f3e-f0 --physdev-is-bridged -m comment --comment "Jump to the VM specific chain." -j neutron-linuxbri-of37c4f3e-f
-A neutron-linuxbri-sg-chain -j ACCEPT
-A neutron-linuxbri-sg-fallback -m comment --comment "Default drop rule for unmatched traffic." -j DROP
COMMIT
# Completed on Mon Oct  9 20:51:54 2023
# Generated by iptables-save v1.4.21 on Mon Oct  9 20:51:54 2023
*raw
:PREROUTING ACCEPT [456478105:255208852779]
:OUTPUT ACCEPT [139154285:51376036705]
:neutron-linuxbri-OUTPUT - [0:0]
:neutron-linuxbri-PREROUTING - [0:0]
-A PREROUTING -j neutron-linuxbri-PREROUTING
-A OUTPUT -j neutron-linuxbri-OUTPUT
-A neutron-linuxbri-PREROUTING -m physdev --physdev-in brq5415b4cd-da -m comment --comment "Set zone for 61646c1-e7" -j CT --zone 4098
-A neutron-linuxbri-PREROUTING -i brq5415b4cd-da -m comment --comment "Set zone for 61646c1-e7" -j CT --zone 4098
-A neutron-linuxbri-PREROUTING -m physdev --physdev-in tap661646c1-e7 -m comment --comment "Set zone for 61646c1-e7" -j CT --zone 4098
-A neutron-linuxbri-PREROUTING -m physdev --physdev-in brq5415b4cd-da -m comment --comment "Set zone for 37c4f3e-f0" -j CT --zone 4098
-A neutron-linuxbri-PREROUTING -i brq5415b4cd-da -m comment --comment "Set zone for 37c4f3e-f0" -j CT --zone 4098
-A neutron-linuxbri-PREROUTING -m physdev --physdev-in tapf37c4f3e-f0 -m comment --comment "Set zone for 37c4f3e-f0" -j CT --zone 4098
COMMIT
# Completed on Mon Oct  9 20:51:54 2023
# Generated by iptables-save v1.4.21 on Mon Oct  9 20:51:54 2023
*nat
:PREROUTING ACCEPT [1175012:125763519]
:INPUT ACCEPT [221618:23513940]
:OUTPUT ACCEPT [248964:25828887]
:POSTROUTING ACCEPT [1196893:127585804]
-A PREROUTING -p tcp -m tcp --dport 15022 -j DNAT --to-destination 10.10.1.150:22
-A PREROUTING -p tcp -m tcp --dport 34222 -j DNAT --to-destination 192.168.0.42:22
-A PREROUTING -p tcp -m tcp --dport 35222 -j DNAT --to-destination 192.168.0.52:22
-A PREROUTING -p tcp -m tcp --dport 10522 -j DNAT --to-destination 192.168.0.105:22
-A PREROUTING -p tcp -m tcp --dport 33022 -j DNAT --to-destination 192.168.0.30:22
-A PREROUTING -p tcp -m tcp --dport 34522 -j DNAT --to-destination 192.168.0.45:22
-A PREROUTING -p tcp -m tcp --dport 32022 -j DNAT --to-destination 192.168.0.20:22
-A PREROUTING -p tcp -m tcp --dport 35722 -j DNAT --to-destination 192.168.0.57:22
-A PREROUTING -p tcp -m tcp --dport 35116 -j DNAT --to-destination 192.168.0.51:12346
-A PREROUTING -p tcp -m tcp --dport 34022 -j DNAT --to-destination 192.168.0.40:22
-A PREROUTING -p tcp -m tcp --dport 3422 -j DNAT --to-destination 192.168.0.34:22
-A PREROUTING -p tcp -m tcp --dport 35322 -j DNAT --to-destination 192.168.0.53:22
-A PREROUTING -p tcp -m tcp --dport 34822 -j DNAT --to-destination 192.168.0.48:22
-A PREROUTING -p tcp -m tcp --dport 33722 -j DNAT --to-destination 192.168.0.37:22
-A PREROUTING -p tcp -m tcp --dport 10580 -j DNAT --to-destination 192.168.0.105:80
-A PREROUTING -p tcp -m tcp --dport 6080 -j DNAT --to-destination 192.168.0.105:6080
-A PREROUTING -p tcp -m tcp --dport 55000 -j DNAT --to-destination 192.168.0.105:5000
-A PREROUTING -p tcp -m tcp --dport 58774 -j DNAT --to-destination 192.168.0.105:8774
-A PREROUTING -p tcp -m tcp --dport 59696 -j DNAT --to-destination 192.168.0.105:9696
-A PREROUTING -p tcp -m tcp --dport 58778 -j DNAT --to-destination 192.168.0.105:8778
-A PREROUTING -p tcp -m tcp --dport 58776 -j DNAT --to-destination 192.168.0.105:8776
-A PREROUTING -p tcp -m tcp --dport 49292 -j DNAT --to-destination 192.168.0.104:9292
-A PREROUTING -p tcp -m tcp --dport 20300 -j DNAT --to-destination 192.168.0.20:3000
-A PREROUTING -p tcp -m tcp --dport 28086 -j DNAT --to-destination 192.168.0.20:8086
-A PREROUTING -p tcp -m tcp --dport 4000:4100 -j DNAT --to-destination 192.168.0.5:4000-4100
-A PREROUTING -p tcp -m tcp --dport 13389 -j DNAT --to-destination 192.168.0.11:3389
-A PREROUTING -p tcp -m tcp --dport 13333 -j DNAT --to-destination 192.168.0.11:3333
-A PREROUTING -p tcp -m tcp --dport 32422 -j DNAT --to-destination 192.168.0.24:22
-A PREROUTING -p tcp -m tcp --dport 6090 -j DNAT --to-destination 192.168.0.94:6080
-A PREROUTING -p tcp -m tcp --dport 33023 -j DNAT --to-destination 192.168.0.30:29022
-A POSTROUTING -s 192.168.122.0/24 -d 224.0.0.0/24 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 -d 255.255.255.255/32 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -j MASQUERADE
-A POSTROUTING -s 192.168.122.0/24 -d 224.0.0.0/24 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 -d 255.255.255.255/32 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -j MASQUERADE
-A POSTROUTING -d 10.10.1.150/32 -p tcp -m tcp --dport 22 -j MASQUERADE
-A POSTROUTING -d 192.168.0.42/32 -p tcp -m tcp --dport 22 -j MASQUERADE
-A POSTROUTING -d 192.168.0.52/32 -p tcp -m tcp --dport 22 -j MASQUERADE
-A POSTROUTING -d 192.168.0.105/32 -p tcp -m tcp --dport 22 -j MASQUERADE
-A POSTROUTING -d 192.168.0.30/32 -p tcp -m tcp --dport 22 -j MASQUERADE
-A POSTROUTING -d 192.168.0.45/32 -p tcp -m tcp --dport 22 -j MASQUERADE
-A POSTROUTING -d 192.168.0.20/32 -p tcp -m tcp --dport 22 -j MASQUERADE
-A POSTROUTING -d 192.168.0.57/32 -p tcp -m tcp --dport 22 -j MASQUERADE
-A POSTROUTING -d 192.168.0.51/32 -p tcp -m tcp --dport 12346 -j MASQUERADE
-A POSTROUTING -d 192.168.0.40/32 -p tcp -m tcp --dport 22 -j MASQUERADE
-A POSTROUTING -d 192.168.0.34/32 -p tcp -m tcp --dport 22 -j MASQUERADE
-A POSTROUTING -d 192.168.0.53/32 -p tcp -m tcp --dport 22 -j MASQUERADE
-A POSTROUTING -d 192.168.0.48/32 -p tcp -m tcp --dport 22 -j MASQUERADE
-A POSTROUTING -d 192.168.0.37/32 -p tcp -m tcp --dport 22 -j MASQUERADE
-A POSTROUTING -d 192.168.0.105/32 -p tcp -m tcp --dport 80 -j MASQUERADE
-A POSTROUTING -d 192.168.0.105/32 -p tcp -m tcp --dport 6080 -j MASQUERADE
-A POSTROUTING -d 192.168.0.105/32 -p tcp -m tcp --dport 5000 -j MASQUERADE
-A POSTROUTING -d 192.168.0.105/32 -p tcp -m tcp --dport 8774 -j MASQUERADE
-A POSTROUTING -d 192.168.0.105/32 -p tcp -m tcp --dport 9696 -j MASQUERADE
-A POSTROUTING -d 192.168.0.105/32 -p tcp -m tcp --dport 8778 -j MASQUERADE
-A POSTROUTING -d 192.168.0.105/32 -p tcp -m tcp --dport 8776 -j MASQUERADE
-A POSTROUTING -d 192.168.0.104/32 -p tcp -m tcp --dport 9292 -j MASQUERADE
-A POSTROUTING -d 192.168.0.20/32 -p tcp -m tcp --dport 3000 -j MASQUERADE
-A POSTROUTING -d 192.168.0.20/32 -p tcp -m tcp --dport 8086 -j MASQUERADE
-A POSTROUTING -d 192.168.0.5/32 -p tcp -m tcp --dport 4000:4100 -j MASQUERADE
-A POSTROUTING -d 192.168.0.11/32 -p tcp -m tcp --dport 3389 -j MASQUERADE
-A POSTROUTING -d 192.168.0.11/32 -p tcp -m tcp --dport 3333 -j MASQUERADE
-A POSTROUTING -d 192.168.0.24/32 -p tcp -m tcp --dport 22 -j MASQUERADE
-A POSTROUTING -d 192.168.0.94/32 -p tcp -m tcp --dport 6080 -j MASQUERADE
-A POSTROUTING -d 192.168.0.30/32 -p tcp -m tcp --dport 29022 -j MASQUERADE
COMMIT
# Completed on Mon Oct  9 20:51:54 2023
